--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">practice2</string>
-    <string name="input_id">Input your ID</string>
+    <string name="input_id">Please enter your ID</string>
     <string name="submit">Submit</string>
-    <string name="info">Information</string>
+    <string name="info">Your ID Information will display here</string>
 </resources>
